Add missing <windows.h> include

It's required for building with MinGW.

https://bugzilla.gnome.org/show_bug.cgi?id=774325